welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:30: error: not found: value getHauteurMonde
avance(getHauteurMonde)
       ^Array1:32: error: not found: value getHauteurMonde
avance(getHauteurMonde)
       ^